crates/python_parser/tests/snapshots/invalid_syntax@assert_empty_msg.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/inline/err/assert_empty_msg.py
---
## AST

```
Module(
    ModModule {
        range: 0..10,
        body: [
            Assert(
                AssertStmt {
                    range: 0..9,
                    test: Name(
                        NameExpr {
                            range: 7..8,
                            id: Name("x"),
                            ctx: Load,
                        },
                    ),
                    msg: None,
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | assert x,
  |          ^ Syntax Error: Expected an expression
  |
